*** Changed
*** Deprecated
+ *tetragono*: =save_state_interval= option for =gm_run= and =ap_run= is deprecated. The state will be saved for every
  step if =save_state_file= was set in the future.
*** Removed
+ *tetragono*: The original function name =create= to create lattice is removed, which was deprecated in v0.2.18. The
  new function name to create lattice is =abstract_lattice=.
*** Fixed

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.19...v0.2.20][v0.2.20]] - 2022-08-02

*** Added
+ *tetraku*: Add models data and ansatzes data into an individual package named =tetraku=.
+ *tetragono*: Configuration use =owner= to get the owner sampling lattice object of this configuration object, instead
  of the previous =_owner=.
+ *TAT.hpp*: Add fusing edges support when =trace= a tensor, to keep the consistency with function =contract=.
+ *TAT.py*: Add fusing edges argument binding for function =trace= of the tensor.
*** Changed
+ *tetragono*: Rename multiple product state to ansatz product state, to avoid the ambiguous abbreivation. Rename all
  =mp_xxx= to =ap_xxx= in tetragono shell.
+ *TAT.hpp*: Two new internal names used by user customed name type are added: =Trace_4= and =Trace_5=. For the simple
  internal name usage, two new default internal names are added: =Default_3= and =Default_5=.
*** Deprecated
+ *tetragono*: =_owner= of Configuration for sampling lattice is deprecated, use =owner= instead.
*** Fixed
+ *TAT.hpp*: Fix a bug in windows platform when copying an edge with fermi symmetry.

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.18...v0.2.19][v0.2.19]] - 2022-07-13

*** Added
+ *tetragono*: Add a new command =gm_hamiltonian= to replace the Hamiltonian of the existent sampling lattice.
+ *tetragono*: Add =conjugate_gradient_method_error= option for =gm_run= and =mp_run= in teragono shell. The conjugate
  gradient will stop if =conjugate_gradient_method_step= reached OR =conjugate_gradient_method_error= reached. Set