@@ -12,6 +12,7 @@
 *** Removed
 + *tetragono*: The original function name =create= to create lattice is removed, which was deprecated in v0.2.18. The
   new function name to create lattice is =abstract_lattice=.
++ *tetragono*: =_owner= of Configuration for sampling lattice and ansatz product state is removed, use =owner= instead.
 *** Fixed
 
 ** [[https://github.com/hzhangxyz/TAT/compare/v0.2.19...v0.2.20][v0.2.20]] - 2022-08-02
